--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "xcli": "./bin/index.js"
+  },
   "dependencies": {
     "commander": "^4.1.1",
     "shelljs": "^0.8.3",
@@ -13,6 +16,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node index.js"
   },
-  "author": "linjiajun",
+  "author": "Aaron",
   "license": "MIT"
 }
