--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node index.js"
+    "build": "node index.js",
+    "example": "node index.js"
   },
   "author": "Aaron",
   "license": "MIT"
