--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "commander": "^4.1.1",
+    "inquirer": "^7.1.0",
+    "ora": "^4.0.3",
     "shelljs": "^0.8.3",
     "xlsx": "^0.15.5"
   },
