--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "node index.js",
-    "example": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aaron",
   "license": "MIT"
