--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": ["excel-parse-json","node"],
   "author": "Aaron",
   "license": "MIT"
 }
