--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chalk": "^5.0.1",
     "commander": "^9.2.0",
     "inquirer": "^8.2.4",
+    "node-xlsx": "^0.21.0",
     "open": "^7.0.3",
     "xlsx": "^0.17.0"
   },
