--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -29,6 +29,8 @@ jobs:
         npm install
     - name: npm publish
       run: |
+        git config --global user.email "qylinxia@qq.com"
+        git config --global user.name "Aaronlamz"
         git checkout dev
         npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
         git stash
