--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "excel-to-json",
+  "name": "excel-to-json-parser",
   "version": "1.0.2",
   "description": "Convert Excel to JSON",
   "main": "index.js",
