--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -32,7 +32,9 @@ jobs:
         git config --global user.email "qylinxia@qq.com"
         git config --global user.name "Aaronlamz"
         npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
+        git stash
         npm version patch
+        git stash pop
         git push --follow-tags
         npm publish
       env:
