--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   ],
   "author": {
     "name": "Aaron Lam",
-    "email": "qylinxia@qq.com"
+    "email": "linjiajun2015@gmail.com"
   },
   "bugs": {
     "url": "https://github.com/Aaronlamz/excel-to-json/issues"
