--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -5,9 +5,9 @@ name: build
 
 on:
   push:
-    branches: dev
+    branches: main
   pull_request:
-    branches: dev
+    branches: main
 
 jobs:
   build:
